--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   },
   "autoload": {
       "psr-4": {
-          "ZerosOnesFun\\google-fonts\\": "src/"
+          "ZerosOnesFun\\EssentialAudio\\": "src/"
       }
   },
   "extra": {
