--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
       }
   ],
   "require": {
-      "flarum/core": "^0.1.0-beta.16 || ^1.0"
+      "flarum/core": "^0.1.0-beta.16 || ^1.0",
+      "fof/upload": "*",
+      "flarum/bbcode": "*"
   },
   "autoload": {
       "psr-4": {
