--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,7 @@
       }
   ],
   "require": {
-      "flarum/core": "^0.1.0-beta.16 || ^1.0",
-      "fof/upload": "*",
-      "flarum/bbcode": "*"
+      "flarum/core": "^0.1.0-beta.16 || ^1.0"
   },
   "autoload": {
       "psr-4": {
@@ -35,6 +33,10 @@
   },
   "extra": {
       "flarum-extension": {
+          "optional-dependencies": [
+             "fof/upload",
+             "flarum/bbcode"
+          ],
           "title": "Essential Audio",
           "category": "feature",
           "icon": {
